--- a/portfolio.html
+++ b/portfolio.html
@@ -20,7 +20,7 @@
                     <a class="logo link" href="./index.html">Web<span class="accent">Studio</span></a>
                     <ul class="header-list list">
                         <li class="header-item"><a class="header-link link" href="index.html">Studio</a></li>
-                        <li class="header-item"><a class="header-link link" href="portfolio.html">Portfolio</a></li>
+                        <li class="header-item"><a class="header-link link current" href="portfolio.html">Portfolio</a></li>
                         <li class="header-item"><a class="header-link link" href="">Contacts</a></li>
                     </ul>
                 </nav>
@@ -57,7 +57,11 @@
                     <ul class="gal-list list">
                         <li class="gal-item">
                             <a class="gal-link link" href="">
-                                <img class="picture" src="./images/portfolio-picture1.jpeg" alt="types of services" width="360" height="300">
+                                <div class="gal-picture-wrap">
+                                    <img class="picture" src="./images/portfolio-picture1.jpeg" alt="types of services" width="360" height="300">
+                                    <p class="gal-cover-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App ·
+                                    Cloud Storage App</p>
+                                </div >
                                 <div class="gal">
                                     <h2 class="list-title">Banking App Interface Concept</h2>
                                     <p class="list-text">App</p>
@@ -66,7 +70,10 @@
                         </li>
                         <li class="gal-item">
                             <a class="gal-link link" href="">
-                                <img class="picture" src="./images/portfolio-picture2.jpeg" alt="types of services" width="360" height="300">
+                                <div class="gal-picture-wrap">
+                                    <img class="picture" src="./images/portfolio-picture2.jpeg" alt="types of services" width="360" height="300">
+                                    <p class="gal-cover-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                                </div >
                                 <div class="gal">
                                     <h2 class="list-title">Cashless Payment</h2>
                                     <p class="list-text">Marketing</p>
@@ -75,7 +82,10 @@
                         </li>
                         <li class="gal-item">
                             <a class="gal-link link" href="">
-                                <img class="picture" src="./images/portfolio-picture3.jpeg" alt="types of services" width="360" height="300">
+                                <div class="gal-picture-wrap">
+                                    <img class="picture" src="./images/portfolio-picture3.jpeg" alt="types of services" width="360" height="300">
+                                    <p class="gal-cover-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                                </div >
                                 <div class="gal">
                                     <h2 class="list-title">Meditation App</h2>
                                     <p class="list-text">App</p>
@@ -84,7 +94,10 @@
                         </li>
                         <li class="gal-item">
                             <a class="gal-link link" href="">
-                                <img class="picture" src="./images/portfolio-picture4.jpeg" alt="types of services" width="360" height="300">
+                                <div class="gal-picture-wrap">
+                                    <img class="picture" src="./images/portfolio-picture4.jpeg" alt="types of services" width="360" height="300">
+                                    <p class="gal-cover-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                                </div >
                                 <div class="gal">
                                     <h2 class="list-title">Taxi Service</h2>
                                     <p class="list-text">Marketing</p>
@@ -93,7 +106,10 @@
                         </li>
                         <li class="gal-item">
                             <a class="gal-link link" href="">
-                                <img class="picture" src="./images/portfolio-picture5.jpeg" alt="types of   services" width="360" height="300">
+                                <div class="gal-picture-wrap">
+                                    <img class="picture" src="./images/portfolio-picture5.jpeg" alt="types of services" width="360" height="300">
+                                    <p class="gal-cover-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                                </div >
                                 <div class="gal">
                                     <h2 class="list-title">Screen Illustrations</h2>
                                     <p class="list-text">Design</p>
@@ -102,7 +118,10 @@
                         </li>
                         <li class="gal-item">
                             <a class="gal-link link" href="">
-                                <img class="picture" src="./images/portfolio-picture6.jpeg" alt="types of services" width="360" height="300">
+                                <div class="gal-picture-wrap">
+                                    <img class="picture" src="./images/portfolio-picture6.jpeg" alt="types of services" width="360" height="300">
+                                    <p class="gal-cover-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                                </div >
                                 <div class="gal">
                                     <h2 class="list-title">Online Courses</h2>
                                     <p class="list-text">Marketing</p>
@@ -111,7 +130,10 @@
                         </li>
                         <li class="gal-item">
                             <a class="gal-link link" href="">
-                                <img class="picture" src="./images/portfolio-picture7.jpeg" alt="types of services" width="360" height="300">
+                                <div class="gal-picture-wrap">
+                                    <img class="picture" src="./images/portfolio-picture7.jpeg" alt="types of services" width="360" height="300">
+                                    <p class="gal-cover-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                                </div >
                                 <div class="gal">
                                     <h2 class="list-title">Instagram Stories Concept</h2>
                                     <p class="list-text">Design</p>
@@ -120,7 +142,10 @@
                         </li>
                         <li class="gal-item">
                             <a class="gal-link link" href="">
-                                <img class="picture" src="./images/portfolio-picture8.jpeg" alt="types of services" width="360" height="300">
+                                <div class="gal-picture-wrap">
+                                    <img class="picture" src="./images/portfolio-picture8.jpeg" alt="types of services" width="360" height="300">
+                                    <p class="gal-cover-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                                </div >
                                 <div class="gal">
                                     <h2 class="list-title">Organic Food</h2>
                                     <p class="list-text">Web Site</p>
@@ -129,7 +154,10 @@
                         </li>
                         <li class="gal-item">
                             <a class="gal-link link" href="">
-                                <img class="picture" src="./images/portfolio-picture9.jpeg" alt="types of services" width="360" height="300">
+                                <div class="gal-picture-wrap">
+                                    <img class="picture" src="./images/portfolio-picture9.jpeg" alt="types of services" width="360" height="300">
+                                    <p class="gal-cover-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                                </div >
                                 <div class="gal">
                                     <h2 class="list-title">Fresh Coffee</h2>
                                     <p class="list-text">Web Site</p>
